--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,6 +1,27 @@
 spring:
   application:
     name: "gateway-service"
+  zipkin:
+    base-url: http://localhost:9411
+
 server:
   port: 8080
+
+eureka:
+  client:
+    service-url:
+      default-zone: "http://localhost:8761/eureka/"
+
+zuul:
+  ignored-services: "*"
+  routes:
+    product-service:
+      path: "/product-service/**"
+      service-id: "product-service"
+    checkout-service:
+      path: "/checkout-service/**"
+      service-id: "checkout-service"
+    email-service:
+      path: "/payment-service/**"
+      service-id: "payment-service"
 
