--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,5 +1,16 @@
 spring:
   application:
     name: "product-service"
+  zipkin:
+    base-url: http://localhost:9411
+
 server:
-  port: 8081
+  port: 0
+
+logging:
+  config: classpath:logback-spring.xml
+
+eureka:
+  client:
+    service-url:
+      default-zone: "http://localhost:8761/eureka/"
