--- a/zipkin-service/Dockerfile
+++ b/zipkin-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM openjdk:8-jdk-alpine
 ADD target/zipkin-service.jar zipkin-service.jar
-CMD java $JAVA_OPTIONS -jar /zipkin-service.jar
+ENTRYPOINT ["java","-jar","/zipkin-service.jar"]
 EXPOSE 9411
