--- a/checkout-service/src/main/resources/application.yml
+++ b/checkout-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: "checkout-service"
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
 server:
   port: 0
@@ -13,4 +13,7 @@ logging:
 eureka:
   client:
     service-url:
-      default-zone: "http://localhost:8761/eureka/"
+      default-zone: http://eureka:8761/eureka/
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    preferIpAddress: true
