--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: "gateway-service"
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
 server:
   port: 8080
@@ -10,7 +10,10 @@ server:
 eureka:
   client:
     service-url:
-      default-zone: "http://localhost:8761/eureka/"
+      default-zone: http://eureka:8761/eureka/
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    preferIpAddress: true
 
 zuul:
   ignored-services: "*"
