--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -1,3 +1,4 @@
 server.name: kibana
 server.host: "0"
-elasticsearch.url: http://elasticsearch:9200
+elasticsearch.hosts: ["http://elasticsearch:9200"]
+#elasticsearch.url: http://elasticsearh:9200
