--- a/zipkin-service/pom.xml
+++ b/zipkin-service/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.7.RELEASE</version>
+    <version>2.2.4.RELEASE</version>
     <relativePath/>
   </parent>
   <groupId>com.store.zipkin</groupId>
@@ -34,7 +34,9 @@
       <version>2.11.7</version>
     </dependency>
   </dependencies>
+
   <build>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
