--- a/checkout-service/Dockerfile
+++ b/checkout-service/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:8-jdk-alpine
 ADD target/checkout-service.jar checkout-service.jar
 ENTRYPOINT ["java","-jar","/checkout-service.jar"]
+EXPOSE 8080
