--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:8-jdk-alpine
 ADD target/payment-service.jar payment-service.jar
 ENTRYPOINT ["java","-jar","/payment-service.jar"]
+EXPOSE 8080
