--- a/registry-service/src/main/resources/application.yml
+++ b/registry-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: "registry"
+    name: "eureka"
 server:
   port: 8761
 
@@ -8,3 +8,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    hostname: eureka
