--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,12 @@ version: '3.5'
 
 services:
 
-  eureka:
+  discovery:
     build:
       context: ./registry-service
-    container_name: eureka
-    hostname: eureka
+    container_name: discovery
     ports:
       - "8761:8761"
-    networks:
-      - store
 
   gateway-service:
     build:
@@ -18,8 +15,6 @@ services:
     container_name: gateway-service
     ports:
       - "8080:8080"
-    networks:
-      - store
 
   product-service:
     build:
@@ -27,8 +22,6 @@ services:
     container_name: product-service
     ports:
       - "8083:8080"
-    networks:
-      - store
 
   checkout-service:
     build:
@@ -36,8 +29,6 @@ services:
     container_name: checkout-service
     ports:
       - "8082:8080"
-    networks:
-      - store
 
   payment-service:
     build:
@@ -45,8 +36,6 @@ services:
     container_name: payment-service
     ports:
       - "8081:8080"
-    networks:
-      - store
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
@@ -58,8 +47,6 @@ services:
       - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-    networks:
-      - store
 
   logstash:
     image: docker.elastic.co/logstash/logstash:7.2.0
@@ -73,8 +60,6 @@ services:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     depends_on:
       - elasticsearch
-    networks:
-      - store
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.2.0
@@ -85,8 +70,6 @@ services:
       - "5601:5601"
     depends_on:
       - elasticsearch
-    networks:
-      - store
 
   zipkin:
     image: openzipkin/zipkin
@@ -97,8 +80,3 @@ services:
       - "9411:9411"
     depends_on:
       - elasticsearch
-    networks:
-      - store
-
-networks:
-  store:
