--- a/registry-service/src/main/resources/application.yml
+++ b/registry-service/src/main/resources/application.yml
@@ -5,8 +5,10 @@ server:
   port: 8761
 
 eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
   instance:
-    hostname: eureka
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
