--- a/zipkin-service/src/main/resources/application.yml
+++ b/zipkin-service/src/main/resources/application.yml
@@ -6,5 +6,5 @@ server:
 
 eureka:
   client:
-    service-url:
-      default-zone: "http://localhost:8761/eureka/"
+    serviceUrl:
+      defaultZone: http://discovery:8761/eureka/
